[ci] Add Windows native job to Coq CI
This is a follow up of the [Zulip discussion about a faster Windows CI](https://rocq-prover.zulipchat.com/#narrow/channel/237656-Rocq-devs-.26-plugin-devs/topic/faster.20windows.20CI.3F)

This was developed for coq-lsp, and there produces a fully working
native binary (tested by CI in coq-lsp repos too).

Todo: check our findlib bump doesn't break Coq Platform

Note: the ocaml github windows action is still a bit brittle, not
clear if that's the GH windows runners failing or the action itself. I
think we can live with this, but OMMV.

Credits: many people helped in getting this running, which wasn't
easy. In particular coq-lsp contributors (I think Ali and Jason),
Opam, findlib, and OCaml for Windows maintainers.

--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -7,7 +7,36 @@ permissions:
 
 jobs:
   Windows:
-    name: Windows
+    name: Windows (Native OPAM)
+    runs-on: windows-latest
+    steps:
+      - name: 🔭 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 🐫 Setup OCaml
+        uses: ocaml/setup-ocaml@v3
+        with:
+          ocaml-compiler: 4.14
+          dune-cache: true
+          opam-local-packages: |
+            coqide-server.opam
+            rocq-*.opam
+
+      - name: 🐫🐪🐫 Get Rocq dependencies
+        run: opam install --deps-only ./coqide-server.opam ./rocq-*.opam
+
+      - name: 🧱 Build Rocq
+        run: opam exec -- make world
+
+      - name: 🐫 Get test suite deps
+        run: opam install ounit2 conf-python-3 conf-time
+
+      - name: 🐛 Test Rocq
+        run: opam exec -- make -j 4 -C test-suite
+
+  Windows-platform:
+    if: false
+    name: Windows (Coq Platform)
     runs-on: windows-latest
     strategy:
       fail-fast: false
