test suite add way to disable subsystems

--- a/test-suite/Makefile
+++ b/test-suite/Makefile
@@ -179,16 +179,20 @@ FAIL_CHK = >&2 echo 'FAILED    $(patsubst %.v.log,%.chk.log,$@)'
 # Testing subsystems
 #######################################################################
 
-# These targets can be skipped by doing `make TARGET= test-suite`
+# These targets can be skipped by doing `make TARGET=`
 COMPLEXITY := $(if $(bogomips),complexity)
 INTERACTIVE := interactive
 UNIT_TESTS := unit-tests
+
+# targets can be skipped by doing  `make DISABLED_SUBSYSTEMS="target1 target2"`
+DISABLED_SUBSYSTEMS?=
+
 VSUBSYSTEMS := prerequisite success failure bugs bugs-nocoqchk output output-coqtop \
   output-modulo-time $(INTERACTIVE) $(COMPLEXITY) modules stm \
   coqdoc ssr $(wildcard primitive/*) ltac2 coqchk
 
 # All subsystems
-SUBSYSTEMS := $(VSUBSYSTEMS) misc ide ide coqchk output-coqchk coqwc coq-makefile precomputed-time-tests tools $(UNIT_TESTS)
+SUBSYSTEMS := $(filter-out $(DISABLED_SUBSYSTEMS),$(VSUBSYSTEMS) misc ide ide coqchk output-coqchk coqwc coq-makefile precomputed-time-tests tools $(UNIT_TESTS))
 
 # EJGA: This seems dangerous as first target...
 .csdp.cache: .csdp.cache.test-suite
