--- a/Makefile.ci
+++ b/Makefile.ci
@@ -196,7 +196,7 @@ ci-ext_lib: ci-stdlib
 
 ci-itauto: ci-stdlib
 
-ci-jasmin: ci-mathcomp_word ci-algebra_tactics
+ci-jasmin: ci-mathcomp_word ci-algebra_tactics ci-itree
 
 ci-autosubst: ci-stdlib
 ci-iris: ci-autosubst
