[CI] DIsactivate jasmin until it get fixed
C.f., https://github.com/jasmin-lang/jasmin/pull/1093
for the full discussion

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1055,7 +1055,7 @@ library:ci-mathcomp_word:
   - library:ci-mathcomp
   stage: build-2
 
-library:ci-jasmin:
+.library:ci-jasmin:  # disabled until repaired
   extends: .ci-template-flambda
   needs:
   - build:edge+flambda
