--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -5,10 +5,16 @@ on: [push, pull_request]
 permissions:
   contents: read
 
+# Cancels previous runs of the same workflow
+concurrency:
+  group: "${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}"
+  cancel-in-progress: true
+
 jobs:
   Windows:
     name: Windows (Native OPAM)
     runs-on: windows-latest
+    timeout-minutes: 45
     steps:
       - name: 🔭 Checkout code
         uses: actions/checkout@v4
