[ci] [macOS] Use setup-ocaml for common windows / macOS job
Ported from coq-lsp CI.

Credits to Ali Caglayan and Jason Gross which helped setup this in
coq-lsp

--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -1,4 +1,4 @@
-name: Windows CI
+name: Github CI
 
 on: [push, pull_request]
 
@@ -11,11 +11,30 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  Windows:
-    name: Windows (Native OPAM)
-    runs-on: windows-latest
+  build:
+    strategy:
+      matrix:
+        include:
+          - name: macOS
+            os: macos-latest
+            test_disabled:
+            # We exclude the coq-core package
+            packages: ./coqide-server.opam ./rocq*.opam
+          - name: Windows
+            os: windows-latest
+            test_disabled: misc coq-makefile precomputed-time-tests
+            # we don't support rocqide on Windows yet, so we filter it, see #20631
+            packages: ./coqide-server.opam ./rocq-*.opam
+      fail-fast: false
+
+    name: ${{ matrix.name }}
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 45
     steps:
+      - name: 🐛 Special macOS Config
+        if: matrix.os == 'macos-latest'
+        run: brew install gnu-time
+
       - name: 🔭 Checkout code
         uses: actions/checkout@v4
 
@@ -24,18 +43,12 @@ jobs:
         with:
           ocaml-compiler: 4.14
           dune-cache: true
-          opam-local-packages: |
-            coqide-server.opam
-            rocq-*.opam
 
       - name: 🐫🐪🐫 Get Rocq dependencies
-        run: opam install --deps-only ./coqide-server.opam ./rocq-*.opam
+        run: opam install --deps-only ${{ matrix.packages }}
 
       - name: 🧱 Build Rocq
         run: opam exec -- make world
 
-      - name: 🐫 Get test suite deps
-        run: opam install ounit2 conf-python-3 conf-time
-
       - name: 🐛 Test Rocq
-        run: opam exec -- make -j 4 -C test-suite DISABLED_SUBSYSTEMS='misc coq-makefile precomputed-time-tests'
+        run: opam exec -- make -j 4 -C test-suite DISABLED_SUBSYSTEMS='${{ matrix.test_disabled }}'
