Use TIMED=1 when running test suite in windows & macos

--- a/.github/workflows/ci-github.yml
+++ b/.github/workflows/ci-github.yml
@@ -51,4 +51,4 @@ jobs:
         run: opam exec -- make world
 
       - name: 🐛 Test Rocq
-        run: opam exec -- make -j 4 -C test-suite DISABLED_SUBSYSTEMS='${{ matrix.test_disabled }}'
+        run: opam exec -- make -j 4 -C test-suite TIMED=1 DISABLED_SUBSYSTEMS='${{ matrix.test_disabled }}'
