--- a/kernel/dune
+++ b/kernel/dune
@@ -39,4 +39,4 @@
 ; In dev profile, we check the kernel against a more strict set of
 ; warnings.
 (env
- (dev (flags :standard -w @a-4-40-44-50)))
+ (dev (flags :standard -w @a-4-40-42-44-50)))
