--- a/dev/shim/dune
+++ b/dev/shim/dune
@@ -9,7 +9,7 @@
  (deps
   %{bin:coqtop}
    ; XXX: bug, we are missing the dep on the _install meta file...
-  %{project_root}/theories/Init/Prelude.vo))
+  %{project_root}/theories/Corelib/Init/Prelude.vo))
 
 (rule
  (targets coqtop)
@@ -26,18 +26,18 @@
 (alias
  (name coqidetop-prelude)
  (deps
-  %{bin:coqidetop.opt}
+  %{bin:coqidetop}
    ; XXX: bug, we are missing the dep on the _install meta file...
-  %{project_root}/theories/Init/Prelude.vo))
+  %{project_root}/theories/Corelib/Init/Prelude.vo))
 
 (rule
- (targets coqidetop.opt)
+ (targets coqidetop)
  (deps (alias coqidetop-prelude))
  (action
   (with-stdout-to %{targets}
    (progn
     (echo "#!/usr/bin/env bash\n")
-    (bash "echo '\"$(dirname \"$0\")\"/%{bin:coqidetop.opt} -I \"$(dirname \"$0\")/%{workspace_root}/../install/default/lib\" -coqlib \"$(dirname \"$0\")/%{project_root}\" \"$@\"'")
+    (bash "echo '\"$(dirname \"$0\")\"/%{bin:coqidetop} -I \"$(dirname \"$0\")/%{workspace_root}/../install/default/lib\" -coqlib \"$(dirname \"$0\")/%{project_root}\" \"$@\"'")
     (run chmod +x %{targets})))))
 
 ; coqc
@@ -46,8 +46,8 @@
  (name coqc-prelude)
  (deps
   %{bin:coqc}
-  %{bin:rocqworker}
-  %{project_root}/theories/Init/Prelude.vo))
+  %{bin:rocqworker.exe}
+  %{project_root}/theories/Corelib/Init/Prelude.vo))
 
 (rule
  (targets coqc)
@@ -64,7 +64,7 @@
 (alias
  (name coqtop.byte-prelude)
  (deps
-  %{project_root}/theories/Init/Prelude.vo
+  %{project_root}/theories/Corelib/Init/Prelude.vo
   %{bin:coqtop.byte}
   %{lib:rocq-runtime.config:config.cma}
   %{lib:rocq-runtime.clib:clib.cma}
@@ -111,9 +111,9 @@
   ; rocqide from PATH instead of giving a nice error
   ; there is no problem with the other shims since they don't depend on optional build products
   %{project_root}/ide/rocqide/rocqide_main.exe
-  %{bin:rocqworker}
+  %{bin:rocqworker.exe}
   %{bin:coqidetop}
-  %{project_root}/theories/Init/Prelude.vo
+  %{project_root}/theories/Corelib/Init/Prelude.vo
   %{project_root}/coqide-server.install
   %{project_root}/rocqide.install))
 
