add index for Ltac2/Reference.v

--- a/doc/corelib/index-list.html.template
+++ b/doc/corelib/index-list.html.template
@@ -153,6 +153,7 @@ through the <tt>Require Import</tt> command.</p>
     theories/Ltac2/Pstring.v
     theories/Ltac2/RedFlags.v
     theories/Ltac2/Ref.v
+    theories/Ltac2/Reference.v
     theories/Ltac2/Rewrite.v
     theories/Ltac2/Std.v
     theories/Ltac2/String.v
