Qualified names for custom entries
There is a deprecated compat layer which should work as long as the
custom entry names don't clash (ie didn't produce warning `custom-entry-overridden`).

--- a/doc/corelib/index-list.html.template
+++ b/doc/corelib/index-list.html.template
@@ -169,6 +169,7 @@ through the <tt>Require Import</tt> command.</p>
     theories/Corelib/Compat/Coq819.v
     theories/Corelib/Compat/Coq820.v
     theories/Corelib/Compat/Rocq90.v
+    theories/Corelib/Compat/Rocq91.v
     theories/Ltac2/Compat/Coq818.v
     theories/Ltac2/Compat/Coq819.v
   </dd>
