Update links and descriptions of Rocq forums.

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,11 @@
 blank_issues_enabled: true
 contact_links:
-  - name: Coq Zulip Chat
-    url: https://coq.zulipchat.com
-    about: For casual and high traffic discussions. You can ask questions about Coq (#Coq users) or questions about Coq internals (#Coq devs & plugin devs). There are also many streams dedicated to external Coq projects.
-  - name: Coq Discourse Forum
-    url: https://coq.discourse.group
-    about: Our official, multilingual forum, for more structured and easy to search discussions. You can also ask about Coq or internals here, and this is the place to send any announcements.
+  - name: The Rocq Prover Zulip Chat
+    url: https://rocq-prover.zulipchat.com
+    about: For casual and high traffic discussions. You can ask questions about the Rocq Prover (#Rocq users) or questions about Rocq internals (#Rocq devs & plugin devs). There are also many streams dedicated to external Rocq projects.
+  - name: The Rocq Prover Discourse Forum
+    url: https://discourse.rocq-prover.org
+    about: Our official, multilingual forum, for more structured and easy to search discussions. You can also ask about the Rocq Prover or internals here, and this is the place to send any announcements.
   - name: Proof Assistants Stack Exchange
     url: https://proofassistants.stackexchange.com
-    about: For questions about Coq, Lean, Agda, Isabelle, etc. This is a Q&A site, where numerous Coq users are available to answer questions, but this is not an official Coq forum.
+    about: For questions about the Rocq Prover, Lean, Agda, Isabelle, etc. This is a Q&A site, where numerous Rocq users are available to answer questions, but this is not an official Rocq forum.
