CI: Make fiat-crypto legacy depend on coqprime
This change makes the fiat-crypto legacy CI job depend on coqprime
to avoid building it from scratch, and passes EXTERNAL_DEPENDENCIES=1
to use the external coqprime installation.

Fixes #20886

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -777,6 +777,8 @@ library:ci-fiat_crypto_legacy:
   needs:
   - build:edge+flambda
   - library:ci-stdlib+flambda
+  - library:ci-coqprime
+  stage: build-3+
   timeout: 1h 30min
 
 # We cannot use flambda due to
