--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -484,7 +484,7 @@ doc:refman:deploy:
     - library:ci-stdlib_doc
   script:
     - echo "$DOCUMENTATION_DEPLOY_KEY" | tr -d '\r' | ssh-add - > /dev/null
-    - git clone git@github.com:rocq-prover/doc.git _deploy
+    - git clone git@github.com:rocq-prover/doc.git _deploy --depth 1
     - rm -rf _deploy/$CI_COMMIT_REF_NAME/api
     - rm -rf _deploy/$CI_COMMIT_REF_NAME/refman
     - rm -rf _deploy/$CI_COMMIT_REF_NAME/corelib
