Fix stale CI job after organization renaming.

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,7 +13,7 @@ jobs:
     # Do not run on forks (we want this request to happen only once every night)
     permissions:
       contents: none
-    if: github.repository_owner == 'coq'
+    if: github.repository_owner == 'rocq-prover'
     runs-on: ubuntu-latest
     steps:
-      - run: curl -d "coq:coq:${{ secrets.DAILY_SCHEDULE_SECRET }}" https://coqbot.herokuapp.com/check-stale-pr
+      - run: curl -d "rocq-prover:rocq:${{ secrets.DAILY_SCHEDULE_SECRET }}" https://coqbot.herokuapp.com/check-stale-pr
