Add CI job using latest ocaml version (on github actions linux)
Using github actions with setup-ocaml, that way we don't have to make
an extra dcker image for the gitlab registry or anything special really.

--- a/.github/workflows/ci-github.yml
+++ b/.github/workflows/ci-github.yml
@@ -17,14 +17,21 @@ jobs:
         include:
           - name: macOS
             os: macos-latest
+            ocaml: 4.14
             test_disabled:
             # We exclude the coq-core package
             packages: ./coqide-server.opam ./rocq*.opam
           - name: Windows
             os: windows-latest
+            ocaml: 4.14
             test_disabled: misc coq-makefile precomputed-time-tests
             # we don't support rocqide on Windows yet, so we filter it, see #20631
             packages: ./coqide-server.opam ./rocq-*.opam
+          - name: Linux (latest OCaml)
+            os: ubuntu-latest
+            ocaml: 5
+            test_disabled:
+            packages: ./coqide-server.opam ./rocq*.opam
       fail-fast: false
 
     name: ${{ matrix.name }}
@@ -41,7 +48,7 @@ jobs:
       - name: 🐫 Setup OCaml
         uses: ocaml/setup-ocaml@v3
         with:
-          ocaml-compiler: 4.14
+          ocaml-compiler: ${{ matrix.ocaml }}
           dune-cache: true
 
       - name: 🐫🐪🐫 Get Rocq dependencies
